@@ -26,6 +26,7 @@ import com.google.common.base.Preconditions;
 import org.apache.druid.error.DruidException;
 import org.apache.druid.indexing.common.LockGranularity;
 import org.apache.druid.indexing.common.TaskLockType;
+import org.apache.druid.indexing.common.task.IndexTaskUtils;
 import org.apache.druid.indexing.common.task.PendingSegmentAllocatingTask;
 import org.apache.druid.indexing.common.task.Task;
 import org.apache.druid.indexing.overlord.IndexerMetadataStorageCoordinator;
@@ -51,7 +52,6 @@ import java.util.List;
 import java.util.Set;
 import java.util.concurrent.Future;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
 
 /**
  * Allocates a pending segment for a given timestamp.
@@ -241,6 +241,7 @@ public class SegmentAllocateAction implements TaskAction<SegmentIdWithShardSpec>
         identifier = tryAllocateSubsequentSegment(toolbox, task, rowInterval, usedSegmentsForRow.iterator().next());
       }
       if (identifier != null) {
+        IndexTaskUtils.emitSegmentAllocateMetric(identifier, task, toolbox.getEmitter());
         return identifier;
       }
 
@@ -287,7 +288,7 @@ public class SegmentAllocateAction implements TaskAction<SegmentIdWithShardSpec>
     final List<Interval> tryIntervals = Granularity.granularitiesFinerThan(preferredSegmentGranularity)
                                                    .stream()
                                                    .map(granularity -> granularity.bucket(timestamp))
-                                                   .collect(Collectors.toList());
+                                                   .toList();
     for (Interval tryInterval : tryIntervals) {
       if (tryInterval.contains(rowInterval)) {
         final SegmentIdWithShardSpec identifier = tryAllocate(toolbox, task, tryInterval, rowInterval, false);
