@@ -25,6 +25,7 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Iterables;
 import org.apache.druid.common.utils.IdUtils;
 import org.apache.druid.data.input.StringTuple;
+import org.apache.druid.error.DruidException;
 import org.apache.druid.error.DruidExceptionMatcher;
 import org.apache.druid.error.ExceptionMatcher;
 import org.apache.druid.indexer.partitions.DynamicPartitionsSpec;
@@ -63,9 +64,11 @@ import org.apache.druid.server.coordinator.simulate.WrappingScheduledExecutorSer
 import org.apache.druid.server.http.DataSegmentPlus;
 import org.apache.druid.timeline.CompactionState;
 import org.apache.druid.timeline.DataSegment;
+import org.apache.druid.timeline.DatasourceInterval;
 import org.apache.druid.timeline.SegmentId;
 import org.apache.druid.timeline.SegmentTimeline;
 import org.apache.druid.timeline.partition.DimensionRangeShardSpec;
+import org.apache.druid.timeline.partition.DimensionValueSetShardSpec;
 import org.apache.druid.timeline.partition.HashBasedNumberedPartialShardSpec;
 import org.apache.druid.timeline.partition.HashBasedNumberedShardSpec;
 import org.apache.druid.timeline.partition.LinearShardSpec;
@@ -90,7 +93,6 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.Parameterized;
-import org.skife.jdbi.v2.exceptions.CallbackFailedException;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
@@ -144,7 +146,12 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
   {
     derbyConnector = derbyConnectorRule.getConnector();
     segmentsTable = derbyConnectorRule.segments();
-    mapper.registerSubtypes(LinearShardSpec.class, NumberedShardSpec.class, HashBasedNumberedShardSpec.class);
+    mapper.registerSubtypes(
+        LinearShardSpec.class,
+        NumberedShardSpec.class,
+        HashBasedNumberedShardSpec.class,
+        DimensionValueSetShardSpec.class
+    );
     derbyConnector.createDataSourceTable();
     derbyConnector.createTaskTables();
     derbyConnector.createSegmentTable();
@@ -199,6 +206,7 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
         derbyConnector,
         leaderSelector,
         segmentMetadataCache,
+        new SegmentsMetadataManagerConfig(null, cacheMode, null),
         emitter
     )
     {
@@ -438,6 +446,106 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
     Assert.assertEquals(replaceLock.getVersion(), Iterables.getOnlyElement(observedLockVersions));
   }
 
+  /**
+   * When a concurrent REPLACE upgrades a still-appending task, the upgraded copy must take its partition number and
+   * core-partition count from the (numbered) pending segment while preserving the original append segment's
+   * {@link DimensionValueSetShardSpec}, so it stays prunable by the broker.
+   */
+  @Test
+  public void testCommitAppendSegments_upgradedSegmentPreservesDimensionValueSetShardSpec()
+  {
+    final String appendVersion = "2023-01-01";
+    final String upgradedVersion = "2023-02-01";
+
+    final String taskAllocatorId = "appendTask";
+    final String replaceTaskId = "replaceTask1";
+    final ReplaceTaskLock replaceLock = new ReplaceTaskLock(
+        replaceTaskId,
+        Intervals.of("2023-01-01/2023-02-01"),
+        upgradedVersion
+    );
+
+    final Map<String, List<String>> partitionDimensionValues = ImmutableMap.of("tenant_id", ImmutableList.of("tenant_a"));
+    // The published append segment carries a DimensionValueSetShardSpec, as stamped at publish time by the streaming task.
+    final DataSegment appendSegment = createSegment(
+        Intervals.of("2023-01-01/2023-01-02"),
+        appendVersion,
+        new DimensionValueSetShardSpec(0, 1, partitionDimensionValues)
+    );
+
+    final List<PendingSegmentRecord> pendingSegmentsForTask = new ArrayList<>();
+    // The pending segment for the append segment itself.
+    pendingSegmentsForTask.add(
+        PendingSegmentRecord.create(
+            SegmentIdWithShardSpec.fromDataSegment(appendSegment),
+            appendVersion,
+            appendSegment.getId().toString(),
+            null,
+            taskAllocatorId
+        )
+    );
+    // The upgraded pending segment minted by the concurrent REPLACE — numbered, pointing back to the append segment.
+    final SegmentIdWithShardSpec upgradedPendingId = new SegmentIdWithShardSpec(
+        TestDataSource.WIKI,
+        Intervals.of("2023-01-01/2023-02-01"),
+        upgradedVersion,
+        new NumberedShardSpec(5, 8)
+    );
+    pendingSegmentsForTask.add(
+        PendingSegmentRecord.create(
+            upgradedPendingId,
+            upgradedVersion,
+            appendSegment.getId().toString(),
+            appendSegment.getId().toString(),
+            taskAllocatorId
+        )
+    );
+    insertPendingSegments(TestDataSource.WIKI, pendingSegmentsForTask, false);
+
+    final SegmentPublishResult commitResult = coordinator.commitAppendSegments(
+        Set.of(appendSegment),
+        Map.of(appendSegment, replaceLock),
+        taskAllocatorId,
+        null
+    );
+    Assert.assertTrue(commitResult.isSuccess());
+
+    final Set<DataSegment> allCommittedSegments
+        = new HashSet<>(retrieveUsedSegments(derbyConnectorRule.metadataTablesConfigSupplier().get()));
+    final Map<String, String> upgradedFromSegmentIdMap = coordinator.retrieveUpgradedFromSegmentIds(
+        TestDataSource.WIKI,
+        allCommittedSegments.stream().map(DataSegment::getId).map(SegmentId::toString).collect(Collectors.toSet())
+    );
+
+    // The original append segment is published as-is, retaining its DimensionValueSetShardSpec.
+    Assert.assertTrue(allCommittedSegments.contains(appendSegment));
+    Assert.assertTrue(appendSegment.getShardSpec() instanceof DimensionValueSetShardSpec);
+
+    // Find the upgraded copy (the one whose upgradedFromSegmentId points back to the append segment).
+    DataSegment upgradedSegment = null;
+    for (DataSegment segment : allCommittedSegments) {
+      if (appendSegment.getId().toString().equals(upgradedFromSegmentIdMap.get(segment.getId().toString()))) {
+        upgradedSegment = segment;
+      }
+    }
+    Assert.assertNotNull("Expected an upgraded copy of the append segment", upgradedSegment);
+
+    // The upgraded copy is published under the replace version, with the pending segment's partition number and core
+    // partitions, but it preserves the original DimensionValueSetShardSpec (and partitionDimensionValues).
+    Assert.assertEquals(upgradedVersion, upgradedSegment.getVersion());
+    Assert.assertTrue(
+        "upgraded append segment should preserve DimensionValueSetShardSpec",
+        upgradedSegment.getShardSpec() instanceof DimensionValueSetShardSpec
+    );
+    Assert.assertEquals(
+        partitionDimensionValues,
+        ((DimensionValueSetShardSpec) upgradedSegment.getShardSpec()).getPartitionDimensionValues()
+    );
+    // Partition number and core partitions come from the (numbered) pending segment.
+    Assert.assertEquals(5, upgradedSegment.getShardSpec().getPartitionNum());
+    Assert.assertEquals(8, upgradedSegment.getShardSpec().getNumCorePartitions());
+  }
+
   @Test
   public void testCommitReplaceSegments_partiallyOverlappingPendingSegmentUnsupported()
   {
@@ -492,9 +600,9 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
       replacingSegments.add(segment);
     }
 
-    Assert.assertFalse(
-        coordinator.commitReplaceSegments(replacingSegments, ImmutableSet.of(replaceLock), null)
-                   .isSuccess()
+    Assert.assertThrows(
+        DruidException.class,
+        () -> coordinator.commitReplaceSegments(replacingSegments, ImmutableSet.of(replaceLock), null)
     );
   }
 
@@ -629,6 +737,82 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
     Assert.assertEquals(1, pendingSegmentsOutsideInterval.size());
     Assert.assertEquals(
         pendingSegmentOutsideInterval.getId().asSegmentId(), pendingSegmentsOutsideInterval.get(0).getId().asSegmentId()
+    );
+  }
+
+  /**
+   * When a REPLACE commits over an interval with already-published APPEND segments held under a REPLACE lock, the
+   * upgraded (re-versioned) copies must preserve their {@link DimensionValueSetShardSpec} so they remain prunable by
+   * the broker.
+   */
+  @Test
+  public void testCommitReplaceSegments_upgradedPublishedSegmentPreservesDimensionValueSetShardSpec()
+  {
+    final ReplaceTaskLock replaceLock = new ReplaceTaskLock("g1", Intervals.of("2023-01-01/2023-02-01"), "2023-02-01");
+
+    final Map<String, List<String>> partitionDimensionValues = ImmutableMap.of("tenant_id", ImmutableList.of("tenant_a"));
+    // A published APPEND segment carrying a DimensionValueSetShardSpec (as stamped at publish time by the streaming task).
+    final DataSegment appendSegment = new DataSegment(
+        "foo",
+        Intervals.of("2023-01-01/2023-01-02"),
+        "2023-01-01",
+        ImmutableMap.of("path", "a-0"),
+        ImmutableList.of("dim1"),
+        ImmutableList.of("m1"),
+        new DimensionValueSetShardSpec(0, 1, partitionDimensionValues),
+        9,
+        100
+    );
+    segmentSchemaTestUtils.insertUsedSegments(Set.of(appendSegment), Collections.emptyMap());
+    insertIntoUpgradeSegmentsTable(
+        Map.of(appendSegment, replaceLock),
+        derbyConnectorRule.metadataTablesConfigSupplier().get()
+    );
+
+    final Set<DataSegment> replacingSegments = new HashSet<>();
+    for (int i = 0; i < 4; i++) {
+      replacingSegments.add(
+          new DataSegment(
+              "foo",
+              Intervals.of("2023-01-01/2023-02-01"),
+              "2023-02-01",
+              ImmutableMap.of("path", "b-" + i),
+              ImmutableList.of("dim1"),
+              ImmutableList.of("m1"),
+              new NumberedShardSpec(i, 4),
+              9,
+              100
+          )
+      );
+    }
+    Assert.assertTrue(coordinator.commitReplaceSegments(replacingSegments, Set.of(replaceLock), null).isSuccess());
+
+    final Set<DataSegment> usedSegments
+        = new HashSet<>(retrieveUsedSegments(derbyConnectorRule.metadataTablesConfigSupplier().get()));
+    final Map<String, String> upgradedFromSegmentIdMap = coordinator.retrieveUpgradedFromSegmentIds(
+        "foo",
+        usedSegments.stream().map(DataSegment::getId).map(SegmentId::toString).collect(Collectors.toSet())
+    );
+
+    // Find the upgraded copy of the append segment (the one whose upgradedFromSegmentId points back to it).
+    DataSegment upgradedSegment = null;
+    for (DataSegment segment : usedSegments) {
+      if (appendSegment.getId().toString().equals(upgradedFromSegmentIdMap.get(segment.getId().toString()))) {
+        upgradedSegment = segment;
+      }
+    }
+    Assert.assertNotNull("Expected an upgraded published segment", upgradedSegment);
+
+    // The upgraded published segment is re-versioned to the replace version but keeps its DimensionValueSetShardSpec
+    // (and partitionDimensionValues), so it remains prunable by the broker.
+    Assert.assertEquals("2023-02-01", upgradedSegment.getVersion());
+    Assert.assertTrue(
+        "upgraded published segment should preserve DimensionValueSetShardSpec",
+        upgradedSegment.getShardSpec() instanceof DimensionValueSetShardSpec
+    );
+    Assert.assertEquals(
+        partitionDimensionValues,
+        ((DimensionValueSetShardSpec) upgradedSegment.getShardSpec()).getPartitionDimensionValues()
     );
   }
 
@@ -1407,7 +1591,7 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
     );
 
     Assert.assertEquals(requestedLimit, actualUnusedSegments.size());
-    Assert.assertTrue(actualUnusedSegments.containsAll(segments.stream().limit(requestedLimit).collect(Collectors.toList())));
+    Assert.assertTrue(actualUnusedSegments.containsAll(segments.stream().limit(requestedLimit).toList()));
   }
 
   @Test
@@ -2035,7 +2219,7 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
 
     // Verify that query for exact interval returns the segments
     Assert.assertEquals(
-        List.of(defaultSegment3),
+        List.of(toSegmentPlusUpgradedId(defaultSegment3, null)),
         coordinator.retrieveUnusedSegmentsWithExactInterval(
             dataSource,
             defaultSegment3.getInterval(),
@@ -2046,7 +2230,7 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
 
     Assert.assertEquals(defaultSegment.getInterval(), defaultSegment2.getInterval());
     Assert.assertEquals(
-        Set.of(defaultSegment, defaultSegment2),
+        Set.of(toSegmentPlusUpgradedId(defaultSegment, null), toSegmentPlusUpgradedId(defaultSegment2, null)),
         Set.copyOf(
             coordinator.retrieveUnusedSegmentsWithExactInterval(
                 dataSource,
@@ -2070,29 +2254,61 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
   }
 
   @Test
-  public void testRetrieveUnusedSegmentIntervals()
+  public void testRetrieveSomeUnusedSegmentIntervalsForDatasource()
   {
     final String dataSource = defaultSegment.getDataSource();
     coordinator.commitSegments(Set.of(defaultSegment, defaultSegment3), null);
 
-    Assert.assertTrue(coordinator.retrieveUnusedSegmentIntervals(dataSource, 100).isEmpty());
+    Assert.assertTrue(coordinator.retrieveSomeUnusedSegmentIntervals(dataSource, 100).isEmpty());
 
     markAllSegmentsUnused(Set.of(defaultSegment), DateTimes.nowUtc().minusHours(1));
     Assert.assertEquals(
         List.of(defaultSegment.getInterval()),
-        coordinator.retrieveUnusedSegmentIntervals(dataSource, 100)
+        coordinator.retrieveSomeUnusedSegmentIntervals(dataSource, 100)
     );
 
     markAllSegmentsUnused(Set.of(defaultSegment3), DateTimes.nowUtc().minusHours(1));
     Assert.assertEquals(
         Set.of(defaultSegment.getInterval(), defaultSegment3.getInterval()),
-        Set.copyOf(coordinator.retrieveUnusedSegmentIntervals(dataSource, 100))
+        Set.copyOf(coordinator.retrieveSomeUnusedSegmentIntervals(dataSource, 100))
     );
 
     // Verify retrieve with limit 1 returns only 1 interval
     Assert.assertEquals(
         1,
-        coordinator.retrieveUnusedSegmentIntervals(dataSource, 1).size()
+        coordinator.retrieveSomeUnusedSegmentIntervals(dataSource, 1).size()
+    );
+  }
+
+  @Test
+  public void testRetrieveSomeUnusedSegmentIntervals()
+  {
+    final String dataSource = defaultSegment.getDataSource();
+    coordinator.commitSegments(Set.of(defaultSegment, defaultSegment3), null);
+
+    final DateTime maxUpdatedTime = DateTimes.nowUtc();
+
+    Assert.assertTrue(coordinator.retrieveSomeUnusedSegmentIntervals(maxUpdatedTime, 100, 100).isEmpty());
+
+    markAllSegmentsUnused(Set.of(defaultSegment), DateTimes.nowUtc().minusHours(1));
+    Assert.assertEquals(
+        Map.of(new DatasourceInterval(dataSource, defaultSegment.getInterval()), 1),
+        coordinator.retrieveSomeUnusedSegmentIntervals(maxUpdatedTime, 100, 100)
+    );
+
+    markAllSegmentsUnused(Set.of(defaultSegment3), DateTimes.nowUtc().minusHours(1));
+    Assert.assertEquals(
+        Map.of(
+            new DatasourceInterval(dataSource, defaultSegment.getInterval()), 1,
+            new DatasourceInterval(dataSource, defaultSegment3.getInterval()), 1
+        ),
+        coordinator.retrieveSomeUnusedSegmentIntervals(maxUpdatedTime, 100, 100)
+    );
+
+    // Verify retrieve with limit 1 returns only 1 interval
+    Assert.assertEquals(
+        1,
+        coordinator.retrieveSomeUnusedSegmentIntervals(maxUpdatedTime, 1, 1).size()
     );
   }
 
@@ -3380,18 +3596,16 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
     }
 
     // Verify that the next attempt fails
-    MatcherAssert.assertThat(
+    DruidExceptionMatcher.assertThat(
         Assert.assertThrows(
-            CallbackFailedException.class,
+            DruidException.class,
             () -> allocatePendingSegmentForAppendTask(wiki, firstOfJan23, IdUtils.getRandomId())
         ),
-        ExceptionMatcher.of(CallbackFailedException.class).expectRootCause(
-            DruidExceptionMatcher.internalServerError().expectMessageIs(
-                "Could not allocate segment"
-                + "[wiki_2023-01-01T00:00:00.000Z_2023-01-02T00:00:00.000Z_1970-01-01T00:00:00.000Z]"
-                + " as there are too many clashing unused versions(upto [1970-01-01T00:00:00.000ZSSSSSSSSSS])"
-                + " in the interval. Kill the old unused versions to proceed."
-            )
+        DruidExceptionMatcher.internalServerError().expectMessageIs(
+            "Could not allocate segment"
+            + "[wiki_2023-01-01T00:00:00.000Z_2023-01-02T00:00:00.000Z_1970-01-01T00:00:00.000Z]"
+            + " as there are too many clashing unused versions(upto [1970-01-01T00:00:00.000ZSSSSSSSSSS])"
+            + " in the interval. Kill the old unused versions to proceed."
         )
     );
   }
@@ -4563,12 +4777,10 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
 
   private CompactionState createTestIndexingState()
   {
-    return new CompactionState(
-        new DynamicPartitionsSpec(100, null),
-        null, null, null,
-        IndexSpec.getDefault(),
-        null, null
-    );
+    return CompactionState.builder()
+                          .partitionsSpec(new DynamicPartitionsSpec(100, null))
+                          .indexSpec(IndexSpec.getDefault())
+                          .build();
   }
 
   private SegmentIdWithShardSpec allocatePendingSegment(
@@ -4664,5 +4876,10 @@ public class IndexerSQLMetadataStorageCoordinatorTest extends IndexerSqlMetadata
         Set.of(expectedSegments),
         coordinator.retrieveUsedSegmentsForIntervals(dataSource, List.of(interval), Segments.ONLY_VISIBLE)
     );
+  }
+
+  private DataSegmentPlus toSegmentPlusUpgradedId(DataSegment segment, String upgradedFromSegmentId)
+  {
+    return new DataSegmentPlus(segment, null, null, null, null, null, upgradedFromSegmentId, null);
   }
 }
